manifests/gin-tattoo-prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    environment: prod
    app: gin-tattoo
